fixed button overlap issue

--- a/src/components/AddLayerModal.scss
+++ b/src/components/AddLayerModal.scss
@@ -25,8 +25,6 @@
   }
 }
 .footerButtons {
-  position: fixed;
-  bottom: 0;
   width: 100%;
   text-align: right;
   margin-bottom: 10px;
